# K1Wi

./: .gitignore  DISCLAIMER.md  LICENSE  Opus.c  README.md  TODO_v1.1.md  cipher_io.c  cipher_io.h  cli.c  cli.h  cmd_binary.c  cmd_crypto.c  cmd_desig.c  cmd_extract.c  cmd_extract.h  cmd_string.c  cmd_string.h  cmd_stubs.c  cmd_version.c  cmd_wipefs.c  convert.c  dct_analysis.c  dct_analysis.h  elfinfo.c  elfinfo.h  embedded_sig.c  embedded_sig.h  entropy.c  entropy.h  entropy_heatmap.c  entropy_heatmap.h  file_carver.c  file_carver.h  file_copy.c  file_copy.h  file_ops.h  forensic_cmds.c  forensic_cmds.h  forensic_enum.c  forensic_enum.h  (+117 more)
Manuals/: CHANGELOG.md  Opus_Super_User_Manual.odt  Opus_Tech_Manual.odt  README.md  RELEASE.md  ROADMAP.md  USER_MANUAL.md  payload.txt
Manuals/demo_payload/: notes.txt  readme.txt
Manuals/images/: figure_6_3_embedded_zip.xcf
gui/: CMakeLists.txt
gui/src/: MainWindow.cpp  MainWindow.h
include/: version.h
testdata/: MANIFEST.txt
testdata/ciphers/: cracked_output.txt  designations.txt  long_cipher.txt  recovered.txt  vigauto_out.txt
testdata/elf/: opus_test_elf
testdata/lyzer/: README.md
testdata/pcap/: k1wi_ethernet_arp_request_reply.pcap  k1wi_ethernet_icmp_echo.pcap  k1wi_ethernet_ipv6_udp.pcap  k1wi_ethernet_mixed_ethertypes.pcap  k1wi_ethernet_time_order_tcp_base64.pcap  k1wi_ethernet_two_tcp_flows.pcap  k1wi_ethernet_udp.pcap  k1wi_ethernet_udp.pcapng  k1wi_invalid_udp_length.pcap  k1wi_qinq_time_order_tcp_base64.pcap  k1wi_time_order_tcp_base64.pcap  (+2 more)
tests/: run_feature_matrix.sh  run_regression.sh
(+17 files in other folders)
